CSCore/SoundOut/DirectSound/dsound.h

	typedef struct IDirectSound                 *LPDIRECTSOUND;
	typedef struct IDirectSound8                *LPDIRECTSOUND8;
	typedef const GUID *LPCGUID;
	//
	// DirectSound API
	//

	typedef BOOL (CALLBACK *LPDSENUMCALLBACKA)(LPGUID, LPCSTR, LPCSTR, LPVOID);
	extern HRESULT WINAPI DirectSoundCreate(__in_opt LPCGUID pcGuidDevice, __deref_out LPDIRECTSOUND *ppDS, __null LPUNKNOWN pUnkOuter);
	extern HRESULT WINAPI DirectSoundEnumerateA(__in LPDSENUMCALLBACKA pDSEnumCallback, __in_opt LPVOID pContext);
	extern HRESULT WINAPI DirectSoundCreate8(__in_opt LPCGUID pcGuidDevice, __deref_out LPDIRECTSOUND8 *ppDS8, __null LPUNKNOWN pUnkOuter);
#define DirectSoundEnumerate        DirectSoundEnumerateW
#define DirectSoundEnumerate        DirectSoundEnumerateA